# spout

./: .gitignore  Cargo.toml  README.md  build.rs  config.kdl  install.sh  testing  uninstall
assets/: logo.txt
src/: app.rs  cli.rs  clipboard.rs  config.rs  error.rs  main.rs  net.rs  sanitize.rs  upload.rs
tests/: integration.py
