[package]
name = "spout"
version = "0.1.4"
edition = "2024"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
anyhow = "1.0"
directories = "5.0"
getrandom = "0.2"
hex = "0.4"
knuffel = "3.2"
lexopt = "0.3"
mime_guess = "2.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "multipart", "rustls-tls"] }
serde_json = "1.0"
